--- a/nginx.yaml
+++ b/nginx.yaml
@@ -16,3 +16,5 @@ spec:
         image: nginx:1.20
         ports:
         - containerPort: 80
+        securityContext:
+          allowPrivilegeEscalation: false
