* Sysdig - remediate sock-shop:user-db "SecurityContext.AllowPrivilegeEscalation" for control "Container allowing privileged sub processes"

--- a/sock-shop.yaml
+++ b/sock-shop.yaml
@@ -8,6 +8,7 @@ metadata:
 
 
 
+
 ---
 apiVersion: apps/v1 # Deployment - Carts
 kind: Deployment
@@ -864,6 +865,7 @@ spec:
             - SETGID
             - SETUID
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
         volumeMounts:
         - mountPath: /tmp
           name: tmp-volume
