--- a/sock-shop.yaml
+++ b/sock-shop.yaml
@@ -8,6 +8,7 @@ metadata:
 
 
 
+
 ---
 apiVersion: apps/v1 # Deployment - Carts
 kind: Deployment
@@ -112,6 +113,7 @@ spec:
             - SETGID
             - SETUID
           readOnlyRootFilesystem: true
+          runAsUser: 100
         volumeMounts:
         - mountPath: /tmp
           name: tmp-volume
